--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VISUAL_LOG // PHOTOGRAPHY</title>
-    <!-- 引入复古字体 -->
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- CRT 屏幕效果叠加层 (如果不想要扫描线，可以在CSS里隐藏) -->
+    <!-- CRT 屏幕效果 (扫描线) -->
     <div class="crt-overlay"></div>
     <div class="scanline"></div>
 
@@ -23,7 +22,7 @@
 
         <!-- 主内容区 -->
         <main class="main-deck">
-            <!-- 左侧：照片列表/数据 -->
+            <!-- 左侧列表 -->
             <aside class="data-bank">
                 <div class="panel-header">INDEX_LOADER</div>
                 <ul id="photo-list" class="file-list">
@@ -35,10 +34,11 @@
                 </div>
             </aside>
 
-            <!-- 右侧：视窗 -->
+            <!-- 右侧视窗 -->
             <section class="viewer-screen">
                 <div class="screen-frame">
                     <div class="screen-content">
+                        <!-- 主图片 -->
                         <img id="main-image" src="" alt="NO_SIGNAL" style="display:none;">
                         <div id="empty-state" class="glitch-text">SELECT DATA TO VIEW</div>
                     </div>
@@ -51,7 +51,6 @@
                 <!-- 控制按钮 -->
                 <div class="controls">
                     <button onclick="prevPhoto()" class="retro-btn">PREV</button>
-                    <!-- 新增：放大按钮 -->
                     <button onclick="openZoom()" class="retro-btn">MAGNIFY</button>
                     <button onclick="toggleAuto()" class="retro-btn" id="auto-btn">AUTO_PLAY</button>
                     <button onclick="nextPhoto()" class="retro-btn">NEXT</button>
@@ -60,13 +59,20 @@
         </main>
     </div>
 
-    <!-- 放大查看层 (默认隐藏) -->
-    <div id="zoom-modal" class="zoom-modal" onclick="closeZoom()">
+    <!-- 放大查看层 -->
+    <!-- 注意：onclick 只绑定在背景层，避免点击按钮误触关闭 -->
+    <div id="zoom-modal" class="zoom-modal" onclick="handleModalClick(event)">
         <div class="zoom-ui-header">
             <span>/// FULL_RES_VIEWER ///</span>
-            <span class="blink" style="margin-left: 20px;">[PRESS_ESC_TO_EXIT]</span>
+            <!-- 新增：100% 放大按钮 -->
+            <button class="retro-btn small-btn" onclick="toggleZoomScale(event)">[1:1 VIEW]</button>
+            <span class="blink" style="margin-left: 20px; font-size: 0.8em;">[ESC TO EXIT]</span>
         </div>
-        <img id="zoom-img" src="" alt="ZOOM_VIEW">
+        
+        <!-- 图片容器，用于滚动 -->
+        <div class="zoom-container">
+            <img id="zoom-img" src="" alt="ZOOM_VIEW">
+        </div>
     </div>
 
     <script src="app.js"></script>
