--- a/public/index.html
+++ b/public/index.html
@@ -4,30 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VISUAL_LOG // PHOTOGRAPHY</title>
-    <!-- 引入复古字体 -->
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- CRT 屏幕效果叠加层 -->
+    <!-- CRT 效果层 (现在 Z-index 是 10) -->
     <div class="crt-overlay"></div>
     <div class="scanline"></div>
 
     <div class="interface-container">
-        <!-- 顶部状态栏 -->
+        <!-- 顶部栏 (Z-index 5, 在线下方) -->
         <header class="top-bar">
             <div class="brand">SYSTEM: <span class="blink">ONLINE</span></div>
             <div class="title">/// ARCHIVE_VISUALizer_V1.0 ///</div>
             <div class="clock" id="clock">00:00:00</div>
         </header>
 
-        <!-- 主内容区 -->
         <main class="main-deck">
-            <!-- 左侧：照片列表/数据 -->
+            <!-- 左侧列表 (Z-index 5, 在线下方) -->
             <aside class="data-bank">
                 <div class="panel-header">INDEX_LOADER</div>
                 <ul id="photo-list" class="file-list">
-                    <!-- JS 会在这里插入列表 -->
                     <li class="loading-text">INITIALIZING...</li>
                 </ul>
                 <div class="deco-box">
@@ -36,7 +33,7 @@
                 </div>
             </aside>
 
-            <!-- 右侧：视窗 -->
+            <!-- 右侧视窗 (Z-index 20, 在线上方，绝对清晰) -->
             <section class="viewer-screen">
                 <div class="screen-frame">
                     <div class="screen-content">
@@ -49,14 +46,27 @@
                     </div>
                 </div>
                 
-                <!-- 控制按钮 -->
                 <div class="controls">
                     <button onclick="prevPhoto()" class="retro-btn">PREV</button>
+                    <button onclick="openZoom()" class="retro-btn">MAGNIFY</button>
                     <button onclick="toggleAuto()" class="retro-btn" id="auto-btn">AUTO_PLAY</button>
                     <button onclick="nextPhoto()" class="retro-btn">NEXT</button>
                 </div>
             </section>
         </main>
+    </div>
+
+    <!-- 放大层 (Z-index 9999) -->
+    <div id="zoom-modal" class="zoom-modal" onclick="handleModalClick(event)">
+        <div class="zoom-ui-header">
+            <span>/// FULL_RES_VIEWER ///</span>
+            <button class="retro-btn small-btn" onclick="toggleZoomScale(event)">[1:1 ORIG SIZE]</button>
+            <span class="blink" style="margin-left: 20px; font-size: 0.8em;">[ESC TO EXIT]</span>
+        </div>
+        
+        <div class="zoom-container">
+            <img id="zoom-img" src="" alt="ZOOM_VIEW">
+        </div>
     </div>
 
     <script src="app.js"></script>
